# Lumin

./: .gitignore  CMakeLists.txt  README.md  runtests.sh  todo
include/: executils.hpp  executor.hpp  filestream.hpp  lexer.hpp  lexerconsts.hpp  lumper.hpp  native.hpp  outstream.hpp  parser.hpp  parserutils.hpp
lum/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
lum/syntaxes/: lum.tmLanguage.json
natives/: outstream.cpp  outstream.lum
src/: main.cpp
src/builtin/: filestream.cpp  outstream.cpp
src/exec/: executils.cpp  executor.cpp
src/lexer/: lexer.cpp
src/lumper/: lumper.cpp
src/parser/: parser.cpp  parserutils.cpp
src/reader/: lexer.cpp  parser.cpp
test/: test.lmp  test.lum  test2.lum
